# shuup-cms-blog

./: CHANGELOG.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
shuup_cms_blog/: apps.py  dashboard_items.py  forms.py  models.py  plugins.py  urls.py  views.py
shuup_cms_blog/admin_module/: form_parts.py
shuup_cms_blog/locale/de/LC_MESSAGES/: django.po
shuup_cms_blog/locale/es/LC_MESSAGES/: django.po
shuup_cms_blog/locale/fi_FI/LC_MESSAGES/: django.po
shuup_cms_blog/locale/fr_CA/LC_MESSAGES/: django.po
shuup_cms_blog/locale/sv_SE/LC_MESSAGES/: django.po
shuup_cms_blog/locale/zh_Hans/LC_MESSAGES/: django.po
shuup_cms_blog/migrations/: 0001_initial.py  0002_django2_updates.py
shuup_cms_blog_tests/: settings.py  test_admin.py  test_plugin.py  test_saved_article.py
