[metadata]
name = shuup-cms-blog
version = 1.0.8.post+gitver
description = Shuup CMS Blog
long_description = file: README.rst
keywords = shuup, blog

[options]
include_package_data = True
packages = find:
install_requires =
    setuptools-gitver>=1.1.0

[options.extras_require]
shuup = shuup>2,<3

[options.entry_points]
shuup.addon = shuup_cms_blog = shuup_cms_blog

[bdist_wheel]
universal = 1

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_cms_blog_tests.settings
django_find_project = false
norecursedirs = node_modules .git venv

[flake8]
exclude = .tox,migrations,doc/*,venv
max-line-length = 120
max-complexity = 12

[isort]
atomic=true
include_trailing_comma=true
line_length=120
known_first_party=shuup_cms_blog*
multi_line_output=3
use_parentheses=true
combine_as_imports=true

[coverage:run]
omit = */migrations/*,venv

[prequ]
annotate = yes

requirements-dev =
    black==20.8b1
    isort==5.6.4
    flake8==3.8.4
    prequ

requirements-test =
    black==20.8b1
    isort==5.6.4
    flake8==3.8.4

    shuup>2,<3
    pytest==5.4.1
    pytest-cov
    pytest-django==3.9.0
    beautifulsoup4<5

    -e .
